# txt-rs

./: .gitignore  Cargo.toml  README.md
src/: atlas.rs  main.rs  maths.rs  shaders.air  shaders.ir  shaders.metal  shaders.metallib  utils.rs
src/text/: freetype.rs  mod.rs
